Sun Jun 10 20:19:47 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (chdir): Pre-check path for validity before eating trailing
	space.  Then, ensure that path_conv doesn't check the path for validity
	again.

Sun Jun 10 12:56:00 2001  Christopher Faylor <cgf@redhat.com>

	* exceptions.cc (sigdelayed): Ensure that signal is cleared as
	the last operation or suffer races.
	* sigproc.cc (proc_subproc): Deal with zombie array overflow.

Sun Jun 10 11:56:00 2001  Corinna Vinschen <corinna@vinschen.de>

	 * cygwin.din: Add fchdir symbols.
	 * path.cc (chdir): Guard against invalid parameter.
	 (fchdir): New function.
	 * include/cygwin/version.h: Bump API minor version to 40.
	 * uinfo.cc (internal_getlogin): Remove unused variable.

Sat Jun  9 23:20:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (seteuid): Set environment variables USERNAME and
	USERDOMAIN before impersonation to workaround a LookupAccountSid()
	misbehaviour.
	* uinfo.cc (internal_getlogin): Revert most of the previous change.
	Don't set environment variables USERNAME and USERDOMAIN. That's
	the job of seteuid() now. Try to get logon server from Lsa
	only if logon server isn't already known.

Thu Jun  7 15:54:32 2001  Robert Collins <rbtcollins@hotmail.com>

	* thread.cc (pthread_cond::Broadcast): Don't print error messages on
	invalid mutexs - user programs are allowed to call
	pthread_cond_broadcast like that.
	(__pthread_cond_timedwait): Initialise themutex properly.
	(__pthread_cond_wait): Initialise themutex properly.

Tue Jun  5 19:56:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::dup): Allocate space for
	savebuf on Cygwin heap.
	(fhandler_console::char_command): Ditto. Use correct values for size.

2001-06-05  Egor Duda  <deo@logos-m.ru>

	* security.h (NTWriteEA): Change prototype.
	* ntea.cc (NTReadEA): Don't check for global ntea setting, now
	it's caller responsibility.
	(NTWriteEA): Ditto.